# simm

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODING_STANDARDS.MD  COMPILATION_WARNINGS.md  FILELOCK.md  LICENSE  README.md  TASK_MASTER.md  index.html  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
.codex/environments/: environment.toml
.github/workflows/: ci.yml  publish-beta-release.yml  publish-release.yml  windows-exe.yml
.serena/: project.yml
docs/: api-crate-coverage-gaps.md  api-crate-integration-recommendations.md  api-crate-refactor-plan.md  api-crate-smoke-test-matrix.md  ui-ship-readiness-memory.md
e2e/: smoke.spec.ts  tauriApp.ts
scripts/: generate_installer_art.ps1  tauri-playwright-dev.mjs
src/: main.tsx  style.css  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.playwright.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_environments_normalized_output_dir.sql
src-tauri/src/: db.rs  discord_rpc.rs  events.rs  main.rs  test_helpers.rs  types.rs
src-tauri/src/commands/: app_init.rs  app_update.rs  auth.rs  config.rs  depotdownloader.rs  discord_rpc.rs  downloads.rs  environments.rs  filesystem.rs  fomod.rs  game_version.rs  github_releases.rs  logger.rs  logs.rs  melon_loader.rs  mod.rs  mod_update.rs  mods.rs  nexus_mods.rs  plugins.rs  security_scanner.rs  settings.rs  thunderstore.rs  update_check.rs  userlibs.rs
src-tauri/src/services/: app_init.rs  app_update.rs  auth.rs  config.rs  depot_downloader.rs  environment.rs  filesystem.rs  filesystem_watcher.rs  fomod.rs  game_version.rs  github_releases.rs  logger.rs  logs.rs  melon_loader.rs  mod.rs  mod_update.rs  mods.rs  mods_snapshot_cache.rs  nexus_mods.rs  plugins.rs  security_scanner.rs  settings.rs  steam.rs  thunderstore.rs  tracked_downloads.rs  update_check.rs  userlibs.rs
src-tauri/src/utils/: depot_downloader_detector.rs  directory_init.rs  global_logger.rs  http_identity.rs  logging.rs  mod.rs  validation.rs
src-tauri/windows/: app.dev.manifest  installer.nsi
src/components/: AnchoredContextMenu.tsx  App.test.tsx  App.tsx  AppUpdateToast.test.tsx  AppUpdateToast.tsx  AuthenticationModal.test.tsx  AuthenticationModal.tsx  ColorPicker.tsx  ConfigurationOverlay.test.tsx  ConfigurationOverlay.tsx  ConfirmOverlay.test.tsx  ConfirmOverlay.tsx  CustomThemeEditor.tsx  DownloadsPanel.test.tsx  DownloadsPanel.tsx  EnvironmentCreationWizard.test.tsx  EnvironmentCreationWizard.tsx  EnvironmentList.test.tsx  EnvironmentList.tsx  ErrorBoundary.tsx  Footer.test.tsx  Footer.tsx  GradientEditor.tsx  HelpOverlay.test.tsx  HelpOverlay.tsx  InstallTargetsDialog.test.tsx  InstallTargetsDialog.tsx  LogsOverlay.test.tsx  LogsOverlay.tsx  MessageOverlay.test.tsx  MessageOverlay.tsx  ModLibraryOverlay.test.tsx  ModLibraryOverlay.tsx  ModsOverlay.test.tsx  ModsOverlay.tsx  PluginsOverlay.test.tsx  PluginsOverlay.tsx  SecurityScanReportOverlay.tsx  SecurityScanReportPage.test.tsx  SecurityScanReportPage.tsx  (+11 more)
src/hooks/: useDiscordPresence.ts
src/services/: api.command-contract.test.js  api.test.ts  api.ts  events.test.ts  events.ts  logger.ts  modLibrarySummary.test.ts  modLibrarySummary.ts  nexusAccessMode.test.ts  nexusAccessMode.ts
(+11 files in other folders)
