[package]
name = "simmrust"
version = "0.1.0"
description = "Schedule I Developer Environment Manager"
authors = ["Tyler"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.6"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10"
zip = "0.6"
unrar = "0.5"
reqwest = { version = "0.11", features = ["json", "multipart"] }
chrono = { version = "0.4", features = ["serde"] }
notify = "6.1"
dirs = "5.0"
aes-gcm = "0.10"
sha2 = "0.10"
hex = "0.4"
octocrab = "0.36"
dotenv = "0.15"
governor = "0.6"
once_cell = "1.19"
urlencoding = "2.1"
quick-xml = { version = "0.31", features = ["serialize"] }
log = "0.4"
env_logger = "0.11"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
custom-protocol = ["tauri/custom-protocol"]

