[package]
name = "simmrust"
version = "0.7.4"
description = "Schedule I Developer Environment Manager"
authors = ["LockWire Labs"]
license = "AGPL-3.0"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["test", "protocol-asset"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.6"
tauri-plugin-fs = "2.0"
tauri-plugin-deep-link = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10"
zip = "0.6"
unrar = "0.5"
reqwest = { version = "0.11", features = ["json", "multipart"] }
chrono = { version = "0.4", features = ["serde"] }
notify = "6.1"
dirs = "5.0"
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
octocrab = "0.36"
dotenv = "0.15"
governor = "0.6"
once_cell = "1.19"
urlencoding = "2.1"
quick-xml = { version = "0.31", features = ["serialize"] }
log = "0.4"
env_logger = "0.11"
discord-rich-presence = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
nexus-api = { git = "https://github.com/SirTidez/nexusmods-api-handler.git", rev = "494f754de30b4890be1d42dfadb6168905b41aa4" }
thunderstore-api = { git = "https://github.com/SirTidez/thunderstore-api-handler.git", rev = "31787b410c5335b17837b7121e1645db7ecb3aa1" }

[dev-dependencies]
serial_test = "3.0"
tempfile = "3.10"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi"] }
winreg = "0.55"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
